src/objects/DSCORGPKG__ConflictField__c.object
<CustomObject>
    <fields>
        <fullName>DSCORGPKG__Conflict__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conflict</label>
        <referenceTo>DSCORGPKG__Conflict__c</referenceTo>
        <relationshipLabel>ConflictFields</relationshipLabel>
        <relationshipName>ConflictFields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Name__c</fullName>
        <label>Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>NumberOfEmployees</fullName>
                </value>
                <value>
                    <fullName>AnnualRevenue</fullName>
                </value>
                <value>
                    <fullName>ShippingStreet</fullName>
                </value>
                <value>
                    <fullName>BillingStreet</fullName>
                </value>
                <value>
                    <fullName>ShippingCity</fullName>
                </value>
                <value>
                    <fullName>BillingCity</fullName>
                </value>
                <value>
                    <fullName>ShippingState</fullName>
                </value>
                <value>
                    <fullName>ShippingPostalCode</fullName>
                </value>
                <value>
                    <fullName>BillingState</fullName>
                </value>
                <value>
                    <fullName>BillingPostalCode</fullName>
                </value>
                <value>
                    <fullName>FirstName</fullName>
                </value>
                <value>
                    <fullName>LastName</fullName>
                </value>
                <value>
                    <fullName>Title</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>MailingCity</fullName>
                </value>
                <value>
                    <fullName>MailingState</fullName>
                </value>
                <value>
                    <fullName>Description</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__NumericalValue__c</fullName>
        <label>NumericalValue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__TextValue__c</fullName>
        <label>TextValue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ConflictField</label>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>ConflictField Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ConflictFields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>